--- a/privacy-engineer.html
+++ b/privacy-engineer.html
@@ -100,7 +100,7 @@ application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Bangkok</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gloo/a3a61d7a-15be-434f-94b6-41184a840fce'>Gloo - Privacy Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/gloo/a3a61d7a-15be-434f-94b6-41184a840fce'>Gloo - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light">Boulder Boulder, Colorado</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -154,7 +154,7 @@ experience?...</p>
 <p><span class="badge badge-light">Melbourne Australia</span></p>
 <p>Posted on: 2019-09-22</p>
 <hr/>
-<h5><a href='https://frb.referrals.selectminds.com/jobs/oeb-data-privacy-paralegal-associate-new-jersey-location-4567'>OEB - Data Privacy Paralegal Associate (New Jersey location) - The Federal Reserve System Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frb.referrals.selectminds.com/jobs/oeb-data-privacy-paralegal-associate-new-jersey-location-4567'>OEB - Data Privacy Paralegal Associate (New Jersey location) - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light">Newark, NJ</span></p>
 <p>Posted on: 2019-09-22</p>
 <hr/>
@@ -166,7 +166,7 @@ experience?...</p>
 <p><span class="badge badge-light">Philadelphia, Pennsylvania</span></p>
 <p>Posted on: 2019-09-18</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nFJiJLwF'>ServiceNow Careers - Privacy Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nFJiJLwF'>ServiceNow Careers - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-09-18</p>
 <hr/>
@@ -222,7 +222,7 @@ trust?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/palantir/e269dfeb-f150-4826-a39e-05afa9d11da2'>Palantir Technologies - Privacy and Civil Liberties Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/palantir/e269dfeb-f150-4826-a39e-05afa9d11da2'>Palantir Technologies - Privacy and Civil Liberties Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
@@ -257,7 +257,7 @@ CA &amp; Sugar Land, TX: perform research into data obfuscation methods for?...<
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-08-18</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=nR7GfLw9'>ServiceNow Careers - Privacy Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=nR7GfLw9'>ServiceNow Careers - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-08-17</p>
 <hr/>
@@ -387,7 +387,7 @@ Core Business Services. Requisition #: GLO000QQ. Knowledge Manager?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/uipath/ef99409c-ebba-44e1-97c5-884f743212ee'>UiPath - Privacy Data Specialist</a></h5> 
+<h5><a href='https://jobs.lever.co/uipath/ef99409c-ebba-44e1-97c5-884f743212ee'>UiPath - Privacy Data Specialist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-07</p>
 <hr/>
@@ -405,11 +405,11 @@ affect?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-01</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/ringcentral/job/o6FU9fwy'>RingCentral Careers - Privacy Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ringcentral/job/o6FU9fwy'>RingCentral Careers - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/etsy/b2605ca0-523f-47e9-a66f-f6b8a3d0d342'>Etsy - Senior Privacy Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/etsy/b2605ca0-523f-47e9-a66f-f6b8a3d0d342'>Etsy - Senior Privacy Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
